--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,7 +29,7 @@
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
-        <div class="col-md-8 col-md-offset-2 text-center">
+        <div class="col-md-12 text-center">
           <div class="display-t">
             <div class="display-tc animate-box" data-animate-effect="fadeIn">
               <h1 style="font-family: 'Dancing Script' !important">Trọng Khang &amp; Huyền Hanh</h1>
