--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,11 +32,18 @@
         <div class="col-md-12 text-center">
           <div class="display-t">
             <div class="display-tc animate-box" data-animate-effect="fadeIn">
-              <h1 style="font-family: 'Dancing Script' !important">Trọng Khang &amp; Huyền Hanh</h1>
+              <h1 style="font-family: 'Dancing Script' !important">
+                Trọng Khang &amp; Huyền Hanh
+              </h1>
               <h2>We Are Getting Married</h2>
-              <div class="simply-countdown simply-countdown-one"></div>
+              <div
+                class="simply-countdown simply-countdown-one"
+                id="simply-countdown-losange"
+              ></div>
               <p>
-                <a href="#" class="btn btn-default btn-sm">Save the date</a>
+                <a href="/invitation" class="btn btn-default btn-sm"
+                  >Save the date</a
+                >
               </p>
             </div>
           </div>
@@ -59,10 +66,16 @@
       <div class="couple-wrap animate-box">
         <div class="couple-half">
           <div class="groom">
-            <img src="assets/images/groom.jpg" alt="groom" class="img-responsive" />
+            <img
+              src="assets/images/groom.jpg"
+              alt="groom"
+              class="img-responsive"
+            />
           </div>
           <div class="desc-groom">
-            <h3 style="font-family: 'Dancing Script' !important">Trọng Khang</h3>
+            <h3 style="font-family: 'Dancing Script' !important">
+              Trọng Khang
+            </h3>
             <p>
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
@@ -73,7 +86,11 @@
         <p class="heart text-center"><i class="icon-heart2"></i></p>
         <div class="couple-half">
           <div class="bride">
-            <img src="assets/images/bride.jpg" alt="groom" class="img-responsive" />
+            <img
+              src="assets/images/bride.jpg"
+              alt="groom"
+              class="img-responsive"
+            />
           </div>
           <div class="desc-bride">
             <h3 style="font-family: 'Dancing Script' !important">Huyền Hanh</h3>
@@ -109,7 +126,7 @@
             <div class="col-md-10 col-md-offset-1">
               <div class="col-md-6 col-sm-6 text-center">
                 <div class="event-wrap animate-box">
-                  <h3>Wedding Party</h3>
+                  <h3>GROOM'S HOUSE</h3>
                   <div class="event-col">
                     <i class="icon-clock"></i>
                     <span>15:00 PM</span>
@@ -119,17 +136,26 @@
                     <span>Sunday 24</span>
                     <span>December, 2023</span>
                   </div>
-                  <p>
-                    <!-- Far far away, behind the word mountains, far from the
-                    countries Vokalia and Consonantia, there live the blind
-                    texts. Separated they live in Bookmarksgrove right at the
-                    coast of the Semantics, a large language ocean. -->
+                  <p style="font-size: 15px !important;">
+                    Ông Đào Trọng Xuân<br />
+                    Bà Tạ Thị Chung<br />
+                    Trung Tâm Văn Hoá Tổ Dân Phố Tự - TT Bích Động <br /><i
+                      class="icon-location-pin"
+                    ></i
+                    ><br />
                   </p>
+                  <div class="qr-container d-flex justify-content-center">
+                    <img
+                      src="assets/images/QR_groom.png"
+                      alt="groom_house"
+                      class="img-responsive qr-img"
+                    />
+                  </div>
                 </div>
               </div>
               <div class="col-md-6 col-sm-6 text-center">
                 <div class="event-wrap animate-box">
-                  <h3>Main Ceremony</h3>
+                  <h3>BRIDE'S HOUSE</h3>
                   <div class="event-col">
                     <i class="icon-clock"></i>
                     <span>9:00 AM</span>
@@ -139,12 +165,19 @@
                     <span>Monday 25</span>
                     <span>December, 2023</span>
                   </div>
-                  <p>
-                    <!-- Far far away, behind the word mountains, far from the
-                    countries Vokalia and Consonantia, there live the blind
-                    texts. Separated they live in Bookmarksgrove right at the
-                    coast of the Semantics, a large language ocean. -->
+                  <p style="font-size: 15px !important;">
+                    Ông Thân Đức Nguyên<br />
+                    Bà Trần Thị Hồng<br />
+                    Xóm Chùa, Đức Liễn, Hồng Thái, Việt Yên<br />
+                    <i class="icon-location-pin"></i><br />
                   </p>
+                  <div class="qr-container d-flex justify-content-center">
+                    <img
+                      src="assets/images/QR_bride.png"
+                      alt="QR_bride"
+                      class="img-responsive qr-img"
+                    />
+                  </div>
                 </div>
               </div>
             </div>
@@ -153,89 +186,6 @@
       </div>
     </div>
   </div>
-
-  <!-- <div id="fh5co-couple-story">
-    <div class="container">
-      <div class="row">
-        <div
-          class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box"
-        >
-          <span>We Love Each Other</span>
-          <h2>Our Story</h2>
-          <p>
-            Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts.
-          </p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 col-md-offset-0">
-          <ul class="timeline animate-box">
-            <li class="animate-box">
-              <div
-                class="timeline-badge"
-                style="background-image: url(assets/images/couple-1.jpg)"
-              ></div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h3 class="timeline-title">First We Meet</h3>
-                  <span class="date">December 25, 2015</span>
-                </div>
-                <div class="timeline-body">
-                  <p>
-                    Far far away, behind the word mountains, far from the
-                    countries Vokalia and Consonantia, there live the blind
-                    texts. Separated they live in Bookmarksgrove right at the
-                    coast of the Semantics, a large language ocean.
-                  </p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted animate-box">
-              <div
-                class="timeline-badge"
-                style="background-image: url(assets/images/couple-2.jpg)"
-              ></div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h3 class="timeline-title">First Date</h3>
-                  <span class="date">December 28, 2015</span>
-                </div>
-                <div class="timeline-body">
-                  <p>
-                    Far far away, behind the word mountains, far from the
-                    countries Vokalia and Consonantia, there live the blind
-                    texts. Separated they live in Bookmarksgrove right at the
-                    coast of the Semantics, a large language ocean.
-                  </p>
-                </div>
-              </div>
-            </li>
-            <li class="animate-box">
-              <div
-                class="timeline-badge"
-                style="background-image: url(assets/images/couple-3.jpg)"
-              ></div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h3 class="timeline-title">In A Relationship</h3>
-                  <span class="date">January 1, 2016</span>
-                </div>
-                <div class="timeline-body">
-                  <p>
-                    Far far away, behind the word mountains, far from the
-                    countries Vokalia and Consonantia, there live the blind
-                    texts. Separated they live in Bookmarksgrove right at the
-                    coast of the Semantics, a large language ocean.
-                  </p>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div> -->
 
   <div id="fh5co-gallery" class="fh5co-section-gray">
     <div class="container">
@@ -254,14 +204,13 @@
       <div class="row row-bottom-padded-md">
         <div class="col-md-12">
           <ul id="fh5co-gallery-list">
-			<li *ngFor="let item of list"
+            <li
+              *ngFor="let item of list"
               class="one-third animate-box"
               data-animate-effect="fadeIn"
               [style]="styleBackGround(item)"
             >
-              <a [href]="href(item)">
-                
-              </a>
+              <a [href]="href(item)"> </a>
             </li>
           </ul>
         </div>
@@ -275,7 +224,6 @@
     style="background-image: url(assets/images/img_bg_5.jpg)"
   >
     <div class="overlay"></div>
-    
   </div>
 
   <div id="fh5co-services" class="fh5co-section-gray">
@@ -291,33 +239,74 @@
       </div>
 
       <div class="row">
-        
-
         <div class="col-md-12 animate-box">
           <div
             class="fh5co-video fh5co-bg"
             style="background-image: url(assets/images/img_bg_3.jpg)"
           >
             <a
-              href="https://www.youtube.com/embed/Eefa1xgzEkE"
-              class="popup-vimeo"
-              ><i class="icon-video2"></i
-            ></a>
+              type="button"
+              class="btn-play mx-auto"
+              data-toggle="modal"
+              data-src="https://www.youtube.com/embed/y6PtDlMnBvI"
+              data-target="#videoModal"
+            >
+              <i class="icon-video2"></i>
+            </a>
           </div>
         </div>
       </div>
     </div>
   </div>
-<!-- Footer Start -->
-<div class="container-fluid bg-dark text-white py-5" id="contact" style="margin-top: 90px;">
-	<div class="container text-center py-5">
-		<div class="fh5co-heading section-title position-relative text-center">
-			<h2 class="text-white">Thank You</h2>
-			<i class="far fa-heart text-white"></i>
-		</div>
-	</div>
-</div>
-<!-- Footer End -->
+  <!-- Video Modal Start -->
+  <div
+    class="modal fade"
+    id="videoModal"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+          <button
+            type="button"
+            class="close"
+            data-dismiss="modal"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <!-- 16:9 aspect ratio -->
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe
+              class="embed-responsive-item"
+              src="https://www.youtube.com/embed/y6PtDlMnBvI"
+              id="video"
+              allowscriptaccess="always"
+              allow="autoplay"
+            ></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Video Modal End -->
+  <!-- Footer Start -->
+  <div
+    class="container-fluid bg-dark text-white py-5"
+    id="contact"
+    style="margin-top: 90px"
+  >
+    <div class="container text-center py-5">
+      <div class="fh5co-heading section-title position-relative text-center">
+        <h2 class="text-white">Thank You</h2>
+        <i class="far fa-heart text-white"></i>
+      </div>
+    </div>
+  </div>
+  <!-- Footer End -->
 </div>
 
 <div class="gototop js-top">
