--- a/src/app/invatation/invatation.component.html
+++ b/src/app/invatation/invatation.component.html
@@ -1,3 +1,10 @@
 <div class="d-flex">
-  <img _ngcontent-rsd-c16="" class="image" />
+  <div class="row">
+    <div class="col-md-6">
+      <img src="assets/images/groom_house.jpg" class="image" />
+    </div>
+    <div class="col-md-6">
+      <img src="assets/images/bride_house.jpg" class="image" />
+    </div>
+  </div>
 </div>
